--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,4 +26,4 @@ body {
     rgb(var(--background-start-rgb));
 }  */
 
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@800&display=swap');
